# cqr

./: .gitignore  CMakeLists.txt  DISABLED_PY_PROJECT.toml  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  meson.build  pyproject.toml  setup.py
.github/workflows/: test.yml
benchmark/: Makefile  README.rst  new_nonsymm_soc.py  nonsymm_soc.py  plot.py
benchmark/benchmark/: base_solver.py  cvxpy_interface.py  test.py
benchmark/benchmark/implementations/: __init__.py  lm_scs.py  new_cqr.py  new_euromir.py  new_new_cqr.py  real_osqp.py  real_scs.py  simple_bfgs.py  simple_cpr.py  simple_cqr.py  simple_hsde.py  simple_scs.py
cqr/: cones.py  cvxpy_interface.py  equilibrate.py  ql_transform.py  solver.py  test.py  test_cones.py  test_ql_transform.py
docs/: index.rst
experiments/: CG convergence.ipynb  DiagonalScalingCGAndScalingTerms.ipynb  TestPosDemDef.ipynb  hsde_linsys_solve.py  newHSDE.py  sparse_qr.py  test_without_hsde.ipynb
new/: .gitignore  Makefile  pyproject.toml  requirements.txt  solver.py  test.py  test_aa2.py  test_update.py
new/cqr/: cones.py  line_search.py  solver.py  test.py
old/: MANIFEST.in  Makefile  pyproject.toml  setup.py  suitesparse.cpp
old/docs/: conf.py  index.rst
old/project_euromir/: cvxpy_solver.py  dcstep.c  equilibrate.py  lbfgs.py  linear_algebra.h  loss.py  loss_no_hsde.py  loss_nullspace_proj.py  minamide.py  minresQLP.py  residual.py  ruiz.h  solver_class.py  solver_nohsde.py
old/project_euromir/profiling/: __init__.py  csc_csr.py
old/project_euromir/tests/: test_cones.py  test_lbfgs.py  test_line_searcher.py  test_old_linear_algebra.py  (+1 more)
old_cqr/: README.rst  cvxpy_interface.py  linspace_project.py  ql_transform.py  solver.py  test.py  test_cones.py  test_linspace_project.py
project_euromir/: __init__.py  cones.py  cvxpy_solver.py  dcsrch.c  dcstep.c  direction_calculator.py  dlmmv.c  dvmlm.c  equilibrate.py  fortran.h  lbfgs.py  lbfgs_multiply.py  line_search.py  line_searcher.py  linear_algebra.c  linear_algebra.h  linear_algebra.py  loss.py  loss_no_hsde.py  loss_nullspace_proj.py  meson.build  minamide.py  minpack.h  newton_cg.py  old_linear_algebra.py  refinement.py  refinement_no_hsde.py  residual.py  ruiz.c  ruiz.h  solver.py  solver_cg.py  solver_cg_new.py  solver_dense_solve.py  solver_new.py  solver_nohsde.py
project_euromir/profiling/: __init__.py  csc.py  csc_csr.py  profiler.py
project_euromir/tests/: __init__.py  __main__.py  equilibrate.py  lbfgs.py  meson.build  test_cones.py  test_direction_calculator.py  test_equilibrate.py  test_lbfgs.py  test_line_search.py  test_line_searcher.py  test_linear_algebra.py  test_loss.py  test_old_linear_algebra.py  test_residual.py  test_solver.py
solver/: equilibrate.py  quasi_newton.py  solver.py
